--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,10 @@
-db.url = jdbc:oracle:thin:@10.10.0.120:1521:cctdb
-db.username = gdcct_ec4
-db.password = gdcct_ec4
-db.defaultschema = gdcct_ec4
-db.driver = oracle.jdbc.driver.OracleDriver
-db.hibernate.dialect =org.hibernate.dialect.OracleDialect
+db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
+db.username = root
+db.password = 123456
+db.driver = com.mysql.jdbc.Driver
+db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 
-jms.vm = vm://managerBroker
-jms.tcp = tcp://10.10.0.19:61616
-#jms.tcp = tcp://10.10.4.222:61616
-#jms.tcp = tcp://192.168.88.116:61616
+jms.tcp = tcp://127.0.0.1:61616
 ws.host = 0.0.0.0
 ws.port =8882
 
