--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
 db.username = root
-db.password = 123456
+db.password = xcjava
 db.driver = com.mysql.jdbc.Driver
 db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 
