--- a/pom.xml
+++ b/pom.xml
@@ -250,10 +250,16 @@
 			<artifactId>camel-mail</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.camel</groupId> <artifactId>camel-mina</artifactId> 
-			<version>${camel.version}</version> </dependency> <dependency> <groupId>org.apache.camel</groupId> 
-			<artifactId>camel-mina2</artifactId> <version>${camel.version}</version> 
-			</dependency> -->
+		<!-- <dependency> 
+			<groupId>org.apache.camel</groupId> 
+			<artifactId>camel-mina</artifactId> 
+			<version>${camel.version}</version> 
+		</dependency> -->
+		<dependency> 
+			<groupId>org.apache.camel</groupId> 
+			<artifactId>camel-mina2</artifactId> 
+			<version>${camel.version}</version> 
+		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-ognl</artifactId>
