--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,4 @@
+#db.url = jdbc:mysql://192.168.88.222:3306/ymesb?characterEncoding=utf-8
 db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
 db.username = root
 db.password = xcjava
@@ -5,9 +6,11 @@ db.driver = com.mysql.jdbc.Driver
 db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 
 jms.tcp = tcp://127.0.0.1:61616
+#jms.tcp = tcp://10.10.4.222:61616
+
 ws.host = 0.0.0.0
 ws.port =8882
 
-esb.task.startup = false
+esb.task.startup = true
 esb.service.startup = true
 esb.domain.startup = true
