--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@ log4j.appender.R.layout.ConversionPattern =%p\: %m%n      %d %c %r %t%n
 
 log4j.appender.app = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.app.DatePattern='_'yyyy-MM-dd'.log'
-log4j.appender.app.File = ./log/manager.log
+log4j.appender.app.File = ./log/ymesb.log
 log4j.appender.app.Threshold = DEBUG
 log4j.appender.app.layout = org.apache.log4j.PatternLayout
 log4j.appender.app.layout.ConversionPattern = %d [%p] %c %r %t%n	%m%n
@@ -34,4 +34,4 @@ log4j.logger.org.apache.struts2 = ERROR,stdout
 log4j.logger.org.quartz.simpl = ERROR,stdout
 log4j.logger.org.quartz.core = ERROR,stdout
 
-log4j.logger.com.gdcct.ec.manager =ERROR,app
+log4j.logger.com.ymsino.esb = DEBUG,app
