--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,11 @@
-#db.url = jdbc:mysql://192.168.88.222:3306/ymesb?characterEncoding=utf-8
-db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
+db.url = jdbc:mysql://192.168.0.160:3306/ymesb?characterEncoding=utf-8
+#db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
 db.username = root
 db.password = xcjava
 db.driver = com.mysql.jdbc.Driver
 db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
+
+protocol.port = 8001,8002,8003
 
 jms.tcp = tcp://127.0.0.1:61616
 #jms.tcp = tcp://10.10.4.222:61616
