--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,6 +5,7 @@ db.password = xcjava
 db.driver = com.mysql.jdbc.Driver
 db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 
+protocol.mstaNum = 40;
 protocol.port = 8001,8002,8003
 
 jms.tcp = tcp://127.0.0.1:61616
