--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -22,6 +22,13 @@ log4j.appender.app.Threshold = DEBUG
 log4j.appender.app.layout = org.apache.log4j.PatternLayout
 log4j.appender.app.layout.ConversionPattern = %d [%p] %c %r %t%n	%m%n
 
+log4j.appender.comm = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.comm.DatePattern='_'yyyy-MM-dd'.log'
+log4j.appender.comm.File = ./log/comm.log
+log4j.appender.comm.Threshold = DEBUG
+log4j.appender.comm.layout = org.apache.log4j.PatternLayout
+log4j.appender.comm.layout.ConversionPattern = %d [%p] %c %r %t%n	%m%n
+
 # configure custom logger
 log4j.logger.org.springframework = ERROR,stdout
 log4j.logger.noModule = ERROR,stdout
@@ -34,4 +41,8 @@ log4j.logger.org.apache.struts2 = ERROR,stdout
 log4j.logger.org.quartz.simpl = ERROR,stdout
 log4j.logger.org.quartz.core = ERROR,stdout
 
+log4j.logger.com.ymsino.esb.comm = DEBUG,comm
+
 log4j.logger.com.ymsino.esb = DEBUG,app
+
+
