--- a/pom.xml
+++ b/pom.xml
@@ -355,6 +355,11 @@
 			<artifactId>camel-xstream</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-netty</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
 		<!-- End camel -->
 
 		<!-- ActiveMQ -->
