--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,15 @@
-db.url = jdbc:mysql://192.168.0.160:3306/ymesb?characterEncoding=utf-8
+db.url = jdbc:mysql://192.168.88.110:3306/ymesb?characterEncoding=utf-8
 #db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
 db.username = root
 db.password = xcjava
 db.driver = com.mysql.jdbc.Driver
 db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 
-protocol.mstaNum = 40;
+protocol.mstaNum = 40
 protocol.port = 8001,8002,8003
+protocol.actTimeout = 3
 
-jms.tcp = tcp://127.0.0.1:61616
+jms.tcp = tcp://0.0.0.0:61616
 #jms.tcp = tcp://10.10.4.222:61616
 
 ws.host = 0.0.0.0
