--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
-db.url = jdbc:mysql://192.168.88.110:3306/ymesb?characterEncoding=utf-8
-#db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
+#db.url = jdbc:mysql://192.168.88.110:3306/ymesb?characterEncoding=utf-8
+#db.url = jdbc:mysql://192.168.1.159:3306/ymesb?characterEncoding=utf-8
+db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
 db.username = root
 db.password = xcjava
 db.driver = com.mysql.jdbc.Driver
@@ -8,6 +9,8 @@ db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
 protocol.mstaNum = 40
 protocol.port = 8001,8002,8003
 protocol.actTimeout = 30
+
+data.settleDate = 5 00:00:00
 
 jms.tcp = tcp://0.0.0.0:61616
 
