--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,13 @@
-#db.url = jdbc:mysql://192.168.88.110:3306/ymesb?characterEncoding=utf-8
+db.url = jdbc:mysql://192.168.88.107:3306/ymesb?characterEncoding=utf-8
 #db.url = jdbc:mysql://192.168.1.159:3306/ymesb?characterEncoding=utf-8
-db.url = jdbc:mysql://127.0.0.1:3306/ymesb?characterEncoding=utf-8
+#db.url = jdbc:mysql://127.0.0.1:3307/ymesb?characterEncoding=utf-8
+#db.url = jdbc:mysql://10.10.4.150:3307/ymesb?characterEncoding=utf-8
+#db.url = jdbc:mysql://10.10.4.138:3306/ymesb?characterEncoding=utf-8&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
+
 db.username = root
 db.password = xcjava
 db.driver = com.mysql.jdbc.Driver
-db.hibernate.dialect =org.hibernate.dialect.MySQL5InnoDBDialect
+db.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 protocol.mstaNum = 40
 protocol.port = 8001,8002,8003
@@ -15,7 +18,7 @@ data.settleDate = 5 00:00:00
 jms.tcp = tcp://0.0.0.0:61616
 
 ws.host = 0.0.0.0
-ws.port =8882
+ws.port = 8882
 
 esb.task.startup = true
 esb.service.startup = true
