--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.rootLogger = WARN,R,stdout
 log4j.appender.R = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.R.DatePattern='_'yyyy-MM-dd'.log'
 log4j.appender.R.File = ./log/log4j.log
-log4j.appender.R.Threshold = ERROR
+log4j.appender.R.Threshold = DEBUG
 log4j.appender.R.layout = org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern =%p\: %m%n      %d %c %r %t%n
 
